Changed "Name" to "Team"

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
           <li><a ui-sref="home"><strong>QCIB 2016</strong></a></li>
           <li><a ui-sref="teams">Teams</a></li>
           <li><a ng-click="getAuth()">Get Auth</a></li>
-          <li><a ng-click="getTeam()">Get Name</a></li>
+          <li><a ng-click="getTeam()">Get Team</a></li>
         </ul>
       </div>
       <div class="menu-group-right">
