Added admin page - Visual switches added, need to fix text in <li>'s. Removed elements from team page to represent actual team page.

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
 
 <div class="grid-frame vertical">
-  <div class="grid-content shrink" style="padding: 0;" ng-controller="menuCtrl">
+  <div class="grid-content shrink" style="padding: 0;" ng-controller="topBarCtrl">
     <div class="menu-group primary">
       <div class="menu-group-left">
         <ul class="primary condense menu-bar">
